--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,22 +4,34 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 </head>
-<body>
-	<div class="header">
-		<img src="static/images/neon.png" class="header_logo">
-	</div>
-    <form class = "login">
-		<img src="static/images/portaberta.png" style = "width: 168px"><br>
-		<label for="user">Usuário:</label><br>
-		<input id="user" name="user" type="text" />
-		<br><br>
-		<label for="passwd">Senha:</label><br>
-		<input id="passwd" name="passwd" type="text" />
-		<br><br>
-		<div style="margin-left: 69.5%;">
-		<input type="submit" value="Login">
+<body style="overflow: hidden;">
+	<div class="bottom_line"></div>
+	<div class ="side-by-side">
+		<div class="window welcome" style="margin-left:auto; margin-right: auto;">
+			<h1 style="font-size: 48px; color: #5d6569;">Texto inspirador rede social...</h1>
+			<p class="subtitulo">
+				Tal tal coisas asjdij<br>
+				Tal tal coisas asjdij<br>
+				Tal tal coisas asjdij<br>
+				Tal tal coisas asjdij<br>
+				Tal tal coisas asjdij<br>				
+			</p>
 		</div>
-    </form>
+		<form class = "window" style="margin-right:auto;"" method="POST">
+			<center>
+				<img src="static/images/portaberta.png" style = "width: 168px"><br>
+			</center>
+			<label for="user">Usuário:</label><br>
+			<input id="user" name="user" type="text" />
+			<br><br>
+			<label for="passwd">Senha:</label><br>
+			<input id="passwd" name="passwd" type="text" />
+			<br><br>
+			<div style="margin-left: 69.5%;">
+			<input type="submit" value="Login">
+			</div>
+		</form>
+	</div>
 	<div class="footer">
 	<p>Porta Aberta © — All Rights Reserved</p>
 	</div>
