--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -5,14 +5,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="bottom_line">
-		
-	</div>
+	<div class="bottom_line"></div>
 	<div class = "side-by-side center">
 		<div class = "window left_window">
 			<div class= "perfil">
 				<img src="static/images/pp.png" style="margin-right: auto; vertical-align:top; display:inline-block; width:128px; height:128px; background-color: #e1ebe7;">				
 				<div style = "margin-right:auto">
+					<button onclick="window.location.href = 'profile'">Alterar Perfil</button>
+
 					<p style="font-size:24px">sadasd</p>
 					<p>
 						cioejoifjwoei<br> fwefwe</div>
