--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -13,7 +13,7 @@
 				<div style = "margin-right:auto">
 					<button onclick="window.location.href = 'profile'">Alterar Perfil</button>
 
-					<p style="font-size:24px">sadasd</p>
+					<p style="font-size:24px">{{current_user}}</p>
 					<p>
 						cioejoifjwoei<br> fwefwe</div>
 					</p>
