--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,6 +6,7 @@
 </head>
 <body style="overflow: hidden;">
 	<div class="bottom_line"></div>
+	<title>Porta Aberta</title>
 	<div class ="side-by-side">
 		<div class="window welcome" style="margin-left:auto; margin-right: auto;">
 			<h1 style="font-size: 48px; color: #5d6569;">Texto inspirador rede social...</h1>
