--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -1,11 +1,12 @@
 
-<!-- <head>
+<head>
     <link rel="stylesheet" href="static/css/styles.css">    
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 </head>
 <body style="overflow: hidden;">
+	<title>Página de usuario</title>
 	<div class="bottom_line"></div>
 	<div class ="side-by-side">
 		<div class="window welcome" style="margin-left:auto; margin-right: auto;">
@@ -18,53 +19,7 @@
 	<div class="footer">
 	<p>Porta Aberta © — All Rights Reserved</p>
 	</div>
-</body> -->
+</body>
 
-<header>
-	<span class="entypo-dot-3 right"></span>
-	<div class="social">
-	  <span class="entypo-facebook"></span>
-	  <span class="entypo-twitter"></span>
-	  <span class="entypo-gplus"></span>
-	  <span class="entypo-tumblr"></span>
-	</div>
-	
-	 
-	<div class="avatar">
-		<img src="static/images/pp.png" style="margin-right: auto; vertical-align:top; display:inline-block; width:128px; height:128px; background-color: #e1ebe7;">
-	  <a href="https://twitter.com/charliesheen"> <h4>@charliesheen</h4></a>
-	</div>
-	<div class="avatar-frame">
-	  
-	</div>
-	
-	
-	  <div class="icon-strip">
-	 <span class="entypo-user-add"></span>
-	 <span class="entypo-thumbs-up"></span>
-	 <span class="entypo-picture"></span>
-		
-	 <span class="entypo-export right"></span>   
-	
-   </div> 
-  </header>
-  <section>
-			  <div class="twitter-info">
-				  <ul>
-					  <li>
-						  1,608
-						  <span>Tweets</span>
-					  </li>
-					  <li>
-						  112
-						  <span>Following</span>
-					  </li>
-					  <li>
-						  9,794,781
-						  <span>Followers</span>
-					  </li>
-				  </ul>
-			  </div>
-  </section>
 
   
