--- a/chatapp/user/app/templates/index.html
+++ b/chatapp/user/app/templates/index.html
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" href="app/static/css/styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gapp/static.com" crossorigin>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 </head>
 <body style="overflow: hidden;">
