--- a/chatapp/user/app/templates/home.html
+++ b/chatapp/user/app/templates/home.html
@@ -13,11 +13,14 @@
 				<img src="/app/static/images/pp.png" style="margin-right: auto; vertical-align:top; display:inline-block; width:128px; height:128px; background-color: #e1ebe7;">
 				<div style = "margin-right:auto">
 					<button onclick="window.location.href = 'profile'">Meu Perfil</button>
+					<form class = "void" style="margin-right:auto;"" method="POST">
+						<input name="button" type="submit" value="Novo Chat" style=" margin-left:auto; font-size:16px;">
+					</form>
 
-					<p style="font-size:24px">{{current_user}}</p>
-					<p>
-						cioejoifjwoei<br> fwefwe</div>
+					<p style="font-size:24px">
+						{{current_user_name}}
 					</p>
+				</div>
 			</div>
 			<div class="bottom_line"></div><!--
 			<div class="side-by-side" style="height:20px; padding-top:8px; ">
@@ -25,31 +28,35 @@
 			<img src="/app/static/images/chat.png" style="width:16px; height:16px;">
 
 			</div>-->
-			<div class="conversa">
-				<div style="width: 100%;">sdsd er referf er rfe </div>
-				<img src="/app/static/images/pp.png" class="miniature_photo">
-			</div>
-			<div class="conversa">
-				<div style="width: 100%;">sdsd er referf er rfe </div>
-				<img src="/app/static/images/pp.png" class="miniature_photo">
-			</div>
-			<div class="conversa">
-				<div style="width: 100%;">sdsd er referf er rfe </div>
-				<img src="/app/static/images/pp.png" class="miniature_photo">
-			</div>
-			<div class="conversa">
-				<div style="width: 100%;">sdsd er referf er rfe </div>
-				<img src="/app/static/images/pp.png" class="miniature_photo">
-			</div>
+
+			<form class = "void" method="POST">			
+			{%for i in range(0, len_chats)%}
+				<div class="conversa">
+					<div style="width: 100%;">
+						<input name="button" id={{i}} type="submit" value={{i}} style=" margin-left:auto; display:none;">
+						<label for={{i}}> {{chats[i]}}</label>
+					</div>
+					<img src="/app/static/images/pp.png" class="miniature_photo">
+				</div>
+			{%endfor%} 
+			</form>
 
 		</div>
-		<div class = "window middle_window">
-			<form style="width:100%;" method="POST">
+		<div class = "window middle_window" style="display:block;">
+			<center>
+				<h1 class="void" style="height:80px; margin-top: -80px; color: #5d6569">{{current_chat}}</h1>
+			</center>
+			<div class="messages_board">
+				{%for i in range(0, len_messages)%} 
+					<div class={{messages[i][0]}}>
+						{{messages[i][1]}} 
+					</div>
+				{%endfor%} 
+			</div>
+			<form style="width:100%; height: 12%;" method="POST">
 				<div class="side-by-side">
-					<input id="passwd" name="passwd" style="width:100%; height:64px; margin-top:auto;" type="text"/>
-					<button style="margin-top:auto; height:64px; width:128px; margin-left: 8px;">
-						Enviar
-					</button>
+					<input id="message" name="message" style="width:100%; height:64px; margin-top:auto;" type="text"/>
+					<input name="button" type="submit" value="Enviar" style="margin-top:auto; height:64px; width:128px; margin-left: 8px;">	
 				</div>
 			</form>
 		</div>
