--- a/chatapp/user/app/templates/home.html
+++ b/chatapp/user/app/templates/home.html
@@ -12,11 +12,6 @@
 			<div class= "perfil">
 				<img src="/app/static/images/pp.png" style="margin-right: auto; vertical-align:top; display:inline-block; width:128px; height:128px; background-color: #e1ebe7;">
 				<div style = "margin-right:auto">
-					<button onclick="window.location.href = 'profile'">Meu Perfil</button>
-					<form class = "void" style="margin-right:auto;"" method="POST">
-						<input name="button" type="submit" value="Novo Chat" style=" margin-left:auto; font-size:16px;">
-					</form>
-
 					<p style="font-size:24px">
 						{{current_user_name}}
 					</p>
@@ -61,12 +56,26 @@
 			</form>
 		</div>
 		<div class = "window right_window">
-			<input id="passwd" name="passwd" style="width:100%; height:32px; margin-top:auto;" type="text"/>
 			<center>
-				<p class="subtitulo" style="font-size:18px;">Descubra novos grupos!</p>
+				<p class="subtitulo" style="font-size:18px;">Adicionar Chat</p>
 				<img src="/app/static/images/location.png" style="width:204px;">
 			<center>
+				<form style="background-color:transparent; border: 0px solid;" method="POST">
+					<label for="name">Nome do Chat:</label><br>
+					<input id="name" name="name" type="text" style="width:100%; height:32px; margin-top:auto;" type="text"/>
+					<div class="spacing"/>
+					<label for="passwd">Convidado:</label><br>
+					<input id="password" name="password" type="text" style="width:100%; height:32px; margin-top:auto;" type="text"/>
+					<div class="spacing"/>
+					<div class="spacing"/>
+					<div class="side-by-side" style="height:22px;">
+						<input name="button" type="submit" value="Novo Chat" style=" margin-top:16px;margin-left:auto; font-size:16px; padding:8px">
+					</div>
+				</form>
+
+
 		</div>
+		
 	</div>
 	<div class="footer">
 	<p>Porta Aberta © — All Rights Reserved</p>
