terminada interface da home

--- a/chatapp/user/app/templates/home.html
+++ b/chatapp/user/app/templates/home.html
@@ -62,10 +62,10 @@
 			<center>
 				<form style="background-color:transparent; border: 0px solid;" method="POST">
 					<label for="name">Nome do Chat:</label><br>
-					<input id="name" name="name" type="text" style="width:100%; height:32px; margin-top:auto;" type="text"/>
+					<input id="chatname" name="chatname" type="text" style="width:100%; height:32px; margin-top:auto;" type="text"/>
 					<div class="spacing"/>
 					<label for="passwd">Convidado:</label><br>
-					<input id="password" name="password" type="text" style="width:100%; height:32px; margin-top:auto;" type="text"/>
+					<input id="guestname" name="guestname" type="text" style="width:100%; height:32px; margin-top:auto;" type="text"/>
 					<div class="spacing"/>
 					<div class="spacing"/>
 					<div class="side-by-side" style="height:22px;">
