--- a/chatapp/user/app/templates/home.html
+++ b/chatapp/user/app/templates/home.html
@@ -61,15 +61,15 @@
 				<img src="/app/static/images/location.png" style="width:204px;">
 			<center>
 				<form style="background-color:transparent; border: 0px solid;" method="POST">
-					<label for="name">Nome do Chat:</label><br>
+					<label for="chatname">Nome do Chat:</label><br>
 					<input id="chatname" name="chatname" type="text" style="width:100%; height:32px; margin-top:auto;" type="text"/>
 					<div class="spacing"/>
-					<label for="passwd">Convidado:</label><br>
-					<input id="guestname" name="guestname" type="text" style="width:100%; height:32px; margin-top:auto;" type="text"/>
+					<label for="guestphone">Telefone do Convidado:</label><br>
+					<input id="guestphone" name="guestphone" type="text" style="width:100%; height:32px; margin-top:auto;" type="text"/>
 					<div class="spacing"/>
 					<div class="spacing"/>
 					<div class="side-by-side" style="height:22px;">
-						<input name="button" type="submit" value="Novo Chat" style=" margin-top:16px;margin-left:auto; font-size:16px; padding:8px">
+						<input name="button" type="submit" value="Novo Chat" style=" margin-top:16px;margin-left:auto; font-size:12px; padding:8px">
 					</div>
 				</form>
 
